docs/versioned_docs/version-0.7.x/06-api-reference/enumerations/CocoLabel.md
# Enumeration: CocoLabel

Defined in: [packages/react-native-executorch/src/types/objectDetection.ts:39](https://github.com/software-mansion/react-native-executorch/blob/180a40dc66a1a5554cd133093a04bade528bff90/packages/react-native-executorch/src/types/objectDetection.ts#L39)

COCO dataset class labels used for object detection.

## Enumeration Members

### AIRPLANE

> **AIRPLANE**: `5`

Defined in: [packages/react-native-executorch/src/types/objectDetection.ts:44](https://github.com/software-mansion/react-native-executorch/blob/180a40dc66a1a5554cd133093a04bade528bff90/packages/react-native-executorch/src/types/objectDetection.ts#L44)

---

### APPLE

> **APPLE**: `53`

Defined in: [packages/react-native-executorch/src/types/objectDetection.ts:91](https://github.com/software-mansion/react-native-executorch/blob/180a40dc66a1a5554cd133093a04bade528bff90/packages/react-native-executorch/src/types/objectDetection.ts#L91)

---

### BACKPACK

> **BACKPACK**: `27`

Defined in: [packages/react-native-executorch/src/types/objectDetection.ts:66](https://github.com/software-mansion/react-native-executorch/blob/180a40dc66a1a5554cd133093a04bade528bff90/packages/react-native-executorch/src/types/objectDetection.ts#L66)

---

### BANANA

> **BANANA**: `52`

Defined in: [packages/react-native-executorch/src/types/objectDetection.ts:90](https://github.com/software-mansion/react-native-executorch/blob/180a40dc66a1a5554cd133093a04bade528bff90/packages/react-native-executorch/src/types/objectDetection.ts#L90)

---

### BASEBALL

> **BASEBALL**: `39`

Defined in: [packages/react-native-executorch/src/types/objectDetection.ts:78](https://github.com/software-mansion/react-native-executorch/blob/180a40dc66a1a5554cd133093a04bade528bff90/packages/react-native-executorch/src/types/objectDetection.ts#L78)

---

### BEAR

> **BEAR**: `23`

Defined in: [packages/react-native-executorch/src/types/objectDetection.ts:62](https://github.com/software-mansion/react-native-executorch/blob/180a40dc66a1a5554cd133093a04bade528bff90/packages/react-native-executorch/src/types/objectDetection.ts#L62)

---

### BED

> **BED**: `65`

Defined in: [packages/react-native-executorch/src/types/objectDetection.ts:103](https://github.com/software-mansion/react-native-executorch/blob/180a40dc66a1a5554cd133093a04bade528bff90/packages/react-native-executorch/src/types/objectDetection.ts#L103)

---

### BENCH

> **BENCH**: `15`

Defined in: [packages/react-native-executorch/src/types/objectDetection.ts:54](https://github.com/software-mansion/react-native-executorch/blob/180a40dc66a1a5554cd133093a04bade528bff90/packages/react-native-executorch/src/types/objectDetection.ts#L54)

---

### BICYCLE

> **BICYCLE**: `2`

Defined in: [packages/react-native-executorch/src/types/objectDetection.ts:41](https://github.com/software-mansion/react-native-executorch/blob/180a40dc66a1a5554cd133093a04bade528bff90/packages/react-native-executorch/src/types/objectDetection.ts#L41)

---

### BIRD

> **BIRD**: `16`

Defined in: [packages/react-native-executorch/src/types/objectDetection.ts:55](https://github.com/software-mansion/react-native-executorch/blob/180a40dc66a1a5554cd133093a04bade528bff90/packages/react-native-executorch/src/types/objectDetection.ts#L55)

---

### BLENDER

> **BLENDER**: `83`

Defined in: [packages/react-native-executorch/src/types/objectDetection.ts:121](https://github.com/software-mansion/react-native-executorch/blob/180a40dc66a1a5554cd133093a04bade528bff90/packages/react-native-executorch/src/types/objectDetection.ts#L121)

---

### BOAT

> **BOAT**: `9`

Defined in: [packages/react-native-executorch/src/types/objectDetection.ts:48](https://github.com/software-mansion/react-native-executorch/blob/180a40dc66a1a5554cd133093a04bade528bff90/packages/react-native-executorch/src/types/objectDetection.ts#L48)

---

### BOOK

> **BOOK**: `84`

Defined in: [packages/react-native-executorch/src/types/objectDetection.ts:122](https://github.com/software-mansion/react-native-executorch/blob/180a40dc66a1a5554cd133093a04bade528bff90/packages/react-native-executorch/src/types/objectDetection.ts#L122)

---

### BOTTLE

> **BOTTLE**: `44`

Defined in: [packages/react-native-executorch/src/types/objectDetection.ts:82](https://github.com/software-mansion/react-native-executorch/blob/180a40dc66a1a5554cd133093a04bade528bff90/packages/react-native-executorch/src/types/objectDetection.ts#L82)

---

### BOWL

> **BOWL**: `51`

Defined in: [packages/react-native-executorch/src/types/objectDetection.ts:89](https://github.com/software-mansion/react-native-executorch/blob/180a40dc66a1a5554cd133093a04bade528bff90/packages/react-native-executorch/src/types/objectDetection.ts#L89)

---

### BROCCOLI

> **BROCCOLI**: `56`

Defined in: [packages/react-native-executorch/src/types/objectDetection.ts:94](https://github.com/software-mansion/react-native-executorch/blob/180a40dc66a1a5554cd133093a04bade528bff90/packages/react-native-executorch/src/types/objectDetection.ts#L94)

---

### BUS

> **BUS**: `6`

Defined in: [packages/react-native-executorch/src/types/objectDetection.ts:45](https://github.com/software-mansion/react-native-executorch/blob/180a40dc66a1a5554cd133093a04bade528bff90/packages/react-native-executorch/src/types/objectDetection.ts#L45)

---

### CAKE

> **CAKE**: `61`

Defined in: [packages/react-native-executorch/src/types/objectDetection.ts:99](https://github.com/software-mansion/react-native-executorch/blob/180a40dc66a1a5554cd133093a04bade528bff90/packages/react-native-executorch/src/types/objectDetection.ts#L99)

---

### CAR

> **CAR**: `3`

Defined in: [packages/react-native-executorch/src/types/objectDetection.ts:42](https://github.com/software-mansion/react-native-executorch/blob/180a40dc66a1a5554cd133093a04bade528bff90/packages/react-native-executorch/src/types/objectDetection.ts#L42)

---

### CARROT

> **CARROT**: `57`

Defined in: [packages/react-native-executorch/src/types/objectDetection.ts:95](https://github.com/software-mansion/react-native-executorch/blob/180a40dc66a1a5554cd133093a04bade528bff90/packages/react-native-executorch/src/types/objectDetection.ts#L95)

---

### CAT

> **CAT**: `17`

Defined in: [packages/react-native-executorch/src/types/objectDetection.ts:56](https://github.com/software-mansion/react-native-executorch/blob/180a40dc66a1a5554cd133093a04bade528bff90/packages/react-native-executorch/src/types/objectDetection.ts#L56)

---

### CELL_PHONE

> **CELL_PHONE**: `77`

Defined in: [packages/react-native-executorch/src/types/objectDetection.ts:115](https://github.com/software-mansion/react-native-executorch/blob/180a40dc66a1a5554cd133093a04bade528bff90/packages/react-native-executorch/src/types/objectDetection.ts#L115)

---

### CHAIR

> **CHAIR**: `62`

Defined in: [packages/react-native-executorch/src/types/objectDetection.ts:100](https://github.com/software-mansion/react-native-executorch/blob/180a40dc66a1a5554cd133093a04bade528bff90/packages/react-native-executorch/src/types/objectDetection.ts#L100)

---

### CLOCK

> **CLOCK**: `85`

Defined in: [packages/react-native-executorch/src/types/objectDetection.ts:123](https://github.com/software-mansion/react-native-executorch/blob/180a40dc66a1a5554cd133093a04bade528bff90/packages/react-native-executorch/src/types/objectDetection.ts#L123)

---

### COUCH

> **COUCH**: `63`

Defined in: [packages/react-native-executorch/src/types/objectDetection.ts:101](https://github.com/software-mansion/react-native-executorch/blob/180a40dc66a1a5554cd133093a04bade528bff90/packages/react-native-executorch/src/types/objectDetection.ts#L101)

---

### COW

> **COW**: `21`

Defined in: [packages/react-native-executorch/src/types/objectDetection.ts:60](https://github.com/software-mansion/react-native-executorch/blob/180a40dc66a1a5554cd133093a04bade528bff90/packages/react-native-executorch/src/types/objectDetection.ts#L60)

---

### CUP

> **CUP**: `47`

Defined in: [packages/react-native-executorch/src/types/objectDetection.ts:85](https://github.com/software-mansion/react-native-executorch/blob/180a40dc66a1a5554cd133093a04bade528bff90/packages/react-native-executorch/src/types/objectDetection.ts#L85)

---

### DESK

> **DESK**: `69`

Defined in: [packages/react-native-executorch/src/types/objectDetection.ts:107](https://github.com/software-mansion/react-native-executorch/blob/180a40dc66a1a5554cd133093a04bade528bff90/packages/react-native-executorch/src/types/objectDetection.ts#L107)

---

### DINING_TABLE

> **DINING_TABLE**: `67`

Defined in: [packages/react-native-executorch/src/types/objectDetection.ts:105](https://github.com/software-mansion/react-native-executorch/blob/180a40dc66a1a5554cd133093a04bade528bff90/packages/react-native-executorch/src/types/objectDetection.ts#L105)

---

### DOG

> **DOG**: `18`

Defined in: [packages/react-native-executorch/src/types/objectDetection.ts:57](https://github.com/software-mansion/react-native-executorch/blob/180a40dc66a1a5554cd133093a04bade528bff90/packages/react-native-executorch/src/types/objectDetection.ts#L57)

---

### DONUT

> **DONUT**: `60`

Defined in: [packages/react-native-executorch/src/types/objectDetection.ts:98](https://github.com/software-mansion/react-native-executorch/blob/180a40dc66a1a5554cd133093a04bade528bff90/packages/react-native-executorch/src/types/objectDetection.ts#L98)

---

### DOOR

> **DOOR**: `71`

Defined in: [packages/react-native-executorch/src/types/objectDetection.ts:109](https://github.com/software-mansion/react-native-executorch/blob/180a40dc66a1a5554cd133093a04bade528bff90/packages/react-native-executorch/src/types/objectDetection.ts#L109)

---

### ELEPHANT

> **ELEPHANT**: `22`

Defined in: [packages/react-native-executorch/src/types/objectDetection.ts:61](https://github.com/software-mansion/react-native-executorch/blob/180a40dc66a1a5554cd133093a04bade528bff90/packages/react-native-executorch/src/types/objectDetection.ts#L61)

---

### EYE

> **EYE**: `30`

Defined in: [packages/react-native-executorch/src/types/objectDetection.ts:69](https://github.com/software-mansion/react-native-executorch/blob/180a40dc66a1a5554cd133093a04bade528bff90/packages/react-native-executorch/src/types/objectDetection.ts#L69)

---

### FIRE_HYDRANT

> **FIRE_HYDRANT**: `11`

Defined in: [packages/react-native-executorch/src/types/objectDetection.ts:50](https://github.com/software-mansion/react-native-executorch/blob/180a40dc66a1a5554cd133093a04bade528bff90/packages/react-native-executorch/src/types/objectDetection.ts#L50)

---

### FORK

> **FORK**: `48`

Defined in: [packages/react-native-executorch/src/types/objectDetection.ts:86](https://github.com/software-mansion/react-native-executorch/blob/180a40dc66a1a5554cd133093a04bade528bff90/packages/react-native-executorch/src/types/objectDetection.ts#L86)

---

### FRISBEE

> **FRISBEE**: `34`

Defined in: [packages/react-native-executorch/src/types/objectDetection.ts:73](https://github.com/software-mansion/react-native-executorch/blob/180a40dc66a1a5554cd133093a04bade528bff90/packages/react-native-executorch/src/types/objectDetection.ts#L73)

---

### GIRAFFE

> **GIRAFFE**: `25`

Defined in: [packages/react-native-executorch/src/types/objectDetection.ts:64](https://github.com/software-mansion/react-native-executorch/blob/180a40dc66a1a5554cd133093a04bade528bff90/packages/react-native-executorch/src/types/objectDetection.ts#L64)

---

### HAIR_BRUSH

> **HAIR_BRUSH**: `91`

Defined in: [packages/react-native-executorch/src/types/objectDetection.ts:129](https://github.com/software-mansion/react-native-executorch/blob/180a40dc66a1a5554cd133093a04bade528bff90/packages/react-native-executorch/src/types/objectDetection.ts#L129)

---

### HAIR_DRIER

> **HAIR_DRIER**: `89`

Defined in: [packages/react-native-executorch/src/types/objectDetection.ts:127](https://github.com/software-mansion/react-native-executorch/blob/180a40dc66a1a5554cd133093a04bade528bff90/packages/react-native-executorch/src/types/objectDetection.ts#L127)

---

### HANDBAG

> **HANDBAG**: `31`

Defined in: [packages/react-native-executorch/src/types/objectDetection.ts:70](https://github.com/software-mansion/react-native-executorch/blob/180a40dc66a1a5554cd133093a04bade528bff90/packages/react-native-executorch/src/types/objectDetection.ts#L70)

---

### HAT

> **HAT**: `26`

Defined in: [packages/react-native-executorch/src/types/objectDetection.ts:65](https://github.com/software-mansion/react-native-executorch/blob/180a40dc66a1a5554cd133093a04bade528bff90/packages/react-native-executorch/src/types/objectDetection.ts#L65)

---

### HORSE

> **HORSE**: `19`

Defined in: [packages/react-native-executorch/src/types/objectDetection.ts:58](https://github.com/software-mansion/react-native-executorch/blob/180a40dc66a1a5554cd133093a04bade528bff90/packages/react-native-executorch/src/types/objectDetection.ts#L58)

---

### HOT_DOG

> **HOT_DOG**: `58`

Defined in: [packages/react-native-executorch/src/types/objectDetection.ts:96](https://github.com/software-mansion/react-native-executorch/blob/180a40dc66a1a5554cd133093a04bade528bff90/packages/react-native-executorch/src/types/objectDetection.ts#L96)

---

### KEYBOARD

> **KEYBOARD**: `76`

Defined in: [packages/react-native-executorch/src/types/objectDetection.ts:114](https://github.com/software-mansion/react-native-executorch/blob/180a40dc66a1a5554cd133093a04bade528bff90/packages/react-native-executorch/src/types/objectDetection.ts#L114)

---

### KITE

> **KITE**: `38`

Defined in: [packages/react-native-executorch/src/types/objectDetection.ts:77](https://github.com/software-mansion/react-native-executorch/blob/180a40dc66a1a5554cd133093a04bade528bff90/packages/react-native-executorch/src/types/objectDetection.ts#L77)

---

### KNIFE

> **KNIFE**: `49`

Defined in: [packages/react-native-executorch/src/types/objectDetection.ts:87](https://github.com/software-mansion/react-native-executorch/blob/180a40dc66a1a5554cd133093a04bade528bff90/packages/react-native-executorch/src/types/objectDetection.ts#L87)

---

### LAPTOP

> **LAPTOP**: `73`

Defined in: [packages/react-native-executorch/src/types/objectDetection.ts:111](https://github.com/software-mansion/react-native-executorch/blob/180a40dc66a1a5554cd133093a04bade528bff90/packages/react-native-executorch/src/types/objectDetection.ts#L111)

---

### MICROWAVE

> **MICROWAVE**: `78`

Defined in: [packages/react-native-executorch/src/types/objectDetection.ts:116](https://github.com/software-mansion/react-native-executorch/blob/180a40dc66a1a5554cd133093a04bade528bff90/packages/react-native-executorch/src/types/objectDetection.ts#L116)

---

### MIRROR

> **MIRROR**: `66`

Defined in: [packages/react-native-executorch/src/types/objectDetection.ts:104](https://github.com/software-mansion/react-native-executorch/blob/180a40dc66a1a5554cd133093a04bade528bff90/packages/react-native-executorch/src/types/objectDetection.ts#L104)

---

### MOTORCYCLE

> **MOTORCYCLE**: `4`

Defined in: [packages/react-native-executorch/src/types/objectDetection.ts:43](https://github.com/software-mansion/react-native-executorch/blob/180a40dc66a1a5554cd133093a04bade528bff90/packages/react-native-executorch/src/types/objectDetection.ts#L43)

---

### MOUSE

> **MOUSE**: `74`

Defined in: [packages/react-native-executorch/src/types/objectDetection.ts:112](https://github.com/software-mansion/react-native-executorch/blob/180a40dc66a1a5554cd133093a04bade528bff90/packages/react-native-executorch/src/types/objectDetection.ts#L112)

---

### ORANGE

> **ORANGE**: `55`

Defined in: [packages/react-native-executorch/src/types/objectDetection.ts:93](https://github.com/software-mansion/react-native-executorch/blob/180a40dc66a1a5554cd133093a04bade528bff90/packages/react-native-executorch/src/types/objectDetection.ts#L93)

---

### OVEN

> **OVEN**: `79`

Defined in: [packages/react-native-executorch/src/types/objectDetection.ts:117](https://github.com/software-mansion/react-native-executorch/blob/180a40dc66a1a5554cd133093a04bade528bff90/packages/react-native-executorch/src/types/objectDetection.ts#L117)

---

### PARKING

> **PARKING**: `14`

Defined in: [packages/react-native-executorch/src/types/objectDetection.ts:53](https://github.com/software-mansion/react-native-executorch/blob/180a40dc66a1a5554cd133093a04bade528bff90/packages/react-native-executorch/src/types/objectDetection.ts#L53)

---

### PERSON

> **PERSON**: `1`

Defined in: [packages/react-native-executorch/src/types/objectDetection.ts:40](https://github.com/software-mansion/react-native-executorch/blob/180a40dc66a1a5554cd133093a04bade528bff90/packages/react-native-executorch/src/types/objectDetection.ts#L40)

---

### PIZZA

> **PIZZA**: `59`

Defined in: [packages/react-native-executorch/src/types/objectDetection.ts:97](https://github.com/software-mansion/react-native-executorch/blob/180a40dc66a1a5554cd133093a04bade528bff90/packages/react-native-executorch/src/types/objectDetection.ts#L97)

---

### PLATE

> **PLATE**: `45`

Defined in: [packages/react-native-executorch/src/types/objectDetection.ts:83](https://github.com/software-mansion/react-native-executorch/blob/180a40dc66a1a5554cd133093a04bade528bff90/packages/react-native-executorch/src/types/objectDetection.ts#L83)

---

### POTTED_PLANT

> **POTTED_PLANT**: `64`

Defined in: [packages/react-native-executorch/src/types/objectDetection.ts:102](https://github.com/software-mansion/react-native-executorch/blob/180a40dc66a1a5554cd133093a04bade528bff90/packages/react-native-executorch/src/types/objectDetection.ts#L102)

---

### REFRIGERATOR

> **REFRIGERATOR**: `82`

Defined in: [packages/react-native-executorch/src/types/objectDetection.ts:120](https://github.com/software-mansion/react-native-executorch/blob/180a40dc66a1a5554cd133093a04bade528bff90/packages/react-native-executorch/src/types/objectDetection.ts#L120)

---

### REMOTE

> **REMOTE**: `75`

Defined in: [packages/react-native-executorch/src/types/objectDetection.ts:113](https://github.com/software-mansion/react-native-executorch/blob/180a40dc66a1a5554cd133093a04bade528bff90/packages/react-native-executorch/src/types/objectDetection.ts#L113)

---

### SANDWICH

> **SANDWICH**: `54`

Defined in: [packages/react-native-executorch/src/types/objectDetection.ts:92](https://github.com/software-mansion/react-native-executorch/blob/180a40dc66a1a5554cd133093a04bade528bff90/packages/react-native-executorch/src/types/objectDetection.ts#L92)

---

### SCISSORS

> **SCISSORS**: `87`

Defined in: [packages/react-native-executorch/src/types/objectDetection.ts:125](https://github.com/software-mansion/react-native-executorch/blob/180a40dc66a1a5554cd133093a04bade528bff90/packages/react-native-executorch/src/types/objectDetection.ts#L125)

---

### SHEEP

> **SHEEP**: `20`

Defined in: [packages/react-native-executorch/src/types/objectDetection.ts:59](https://github.com/software-mansion/react-native-executorch/blob/180a40dc66a1a5554cd133093a04bade528bff90/packages/react-native-executorch/src/types/objectDetection.ts#L59)

---

### SHOE

> **SHOE**: `29`

Defined in: [packages/react-native-executorch/src/types/objectDetection.ts:68](https://github.com/software-mansion/react-native-executorch/blob/180a40dc66a1a5554cd133093a04bade528bff90/packages/react-native-executorch/src/types/objectDetection.ts#L68)

---

### SINK

> **SINK**: `81`

Defined in: [packages/react-native-executorch/src/types/objectDetection.ts:119](https://github.com/software-mansion/react-native-executorch/blob/180a40dc66a1a5554cd133093a04bade528bff90/packages/react-native-executorch/src/types/objectDetection.ts#L119)

---

### SKATEBOARD

> **SKATEBOARD**: `41`

Defined in: [packages/react-native-executorch/src/types/objectDetection.ts:79](https://github.com/software-mansion/react-native-executorch/blob/180a40dc66a1a5554cd133093a04bade528bff90/packages/react-native-executorch/src/types/objectDetection.ts#L79)

---

### SKIS

> **SKIS**: `35`

Defined in: [packages/react-native-executorch/src/types/objectDetection.ts:74](https://github.com/software-mansion/react-native-executorch/blob/180a40dc66a1a5554cd133093a04bade528bff90/packages/react-native-executorch/src/types/objectDetection.ts#L74)

---

### SNOWBOARD

> **SNOWBOARD**: `36`

Defined in: [packages/react-native-executorch/src/types/objectDetection.ts:75](https://github.com/software-mansion/react-native-executorch/blob/180a40dc66a1a5554cd133093a04bade528bff90/packages/react-native-executorch/src/types/objectDetection.ts#L75)

---

### SPOON

> **SPOON**: `50`

Defined in: [packages/react-native-executorch/src/types/objectDetection.ts:88](https://github.com/software-mansion/react-native-executorch/blob/180a40dc66a1a5554cd133093a04bade528bff90/packages/react-native-executorch/src/types/objectDetection.ts#L88)

---

### SPORTS

> **SPORTS**: `37`

Defined in: [packages/react-native-executorch/src/types/objectDetection.ts:76](https://github.com/software-mansion/react-native-executorch/blob/180a40dc66a1a5554cd133093a04bade528bff90/packages/react-native-executorch/src/types/objectDetection.ts#L76)

---

### STOP_SIGN

> **STOP_SIGN**: `13`

Defined in: [packages/react-native-executorch/src/types/objectDetection.ts:52](https://github.com/software-mansion/react-native-executorch/blob/180a40dc66a1a5554cd133093a04bade528bff90/packages/react-native-executorch/src/types/objectDetection.ts#L52)

---

### STREET_SIGN

> **STREET_SIGN**: `12`

Defined in: [packages/react-native-executorch/src/types/objectDetection.ts:51](https://github.com/software-mansion/react-native-executorch/blob/180a40dc66a1a5554cd133093a04bade528bff90/packages/react-native-executorch/src/types/objectDetection.ts#L51)

---

### SUITCASE

> **SUITCASE**: `33`

Defined in: [packages/react-native-executorch/src/types/objectDetection.ts:72](https://github.com/software-mansion/react-native-executorch/blob/180a40dc66a1a5554cd133093a04bade528bff90/packages/react-native-executorch/src/types/objectDetection.ts#L72)

---

### SURFBOARD

> **SURFBOARD**: `42`

Defined in: [packages/react-native-executorch/src/types/objectDetection.ts:80](https://github.com/software-mansion/react-native-executorch/blob/180a40dc66a1a5554cd133093a04bade528bff90/packages/react-native-executorch/src/types/objectDetection.ts#L80)

---

### TEDDY_BEAR

> **TEDDY_BEAR**: `88`

Defined in: [packages/react-native-executorch/src/types/objectDetection.ts:126](https://github.com/software-mansion/react-native-executorch/blob/180a40dc66a1a5554cd133093a04bade528bff90/packages/react-native-executorch/src/types/objectDetection.ts#L126)

---

### TENNIS_RACKET

> **TENNIS_RACKET**: `43`

Defined in: [packages/react-native-executorch/src/types/objectDetection.ts:81](https://github.com/software-mansion/react-native-executorch/blob/180a40dc66a1a5554cd133093a04bade528bff90/packages/react-native-executorch/src/types/objectDetection.ts#L81)

---

### TIE

> **TIE**: `32`

Defined in: [packages/react-native-executorch/src/types/objectDetection.ts:71](https://github.com/software-mansion/react-native-executorch/blob/180a40dc66a1a5554cd133093a04bade528bff90/packages/react-native-executorch/src/types/objectDetection.ts#L71)

---

### TOASTER

> **TOASTER**: `80`

Defined in: [packages/react-native-executorch/src/types/objectDetection.ts:118](https://github.com/software-mansion/react-native-executorch/blob/180a40dc66a1a5554cd133093a04bade528bff90/packages/react-native-executorch/src/types/objectDetection.ts#L118)

---

### TOILET

> **TOILET**: `70`

Defined in: [packages/react-native-executorch/src/types/objectDetection.ts:108](https://github.com/software-mansion/react-native-executorch/blob/180a40dc66a1a5554cd133093a04bade528bff90/packages/react-native-executorch/src/types/objectDetection.ts#L108)

---

### TOOTHBRUSH

> **TOOTHBRUSH**: `90`

Defined in: [packages/react-native-executorch/src/types/objectDetection.ts:128](https://github.com/software-mansion/react-native-executorch/blob/180a40dc66a1a5554cd133093a04bade528bff90/packages/react-native-executorch/src/types/objectDetection.ts#L128)

---

### TRAFFIC_LIGHT

> **TRAFFIC_LIGHT**: `10`

Defined in: [packages/react-native-executorch/src/types/objectDetection.ts:49](https://github.com/software-mansion/react-native-executorch/blob/180a40dc66a1a5554cd133093a04bade528bff90/packages/react-native-executorch/src/types/objectDetection.ts#L49)

---

### TRAIN

> **TRAIN**: `7`

Defined in: [packages/react-native-executorch/src/types/objectDetection.ts:46](https://github.com/software-mansion/react-native-executorch/blob/180a40dc66a1a5554cd133093a04bade528bff90/packages/react-native-executorch/src/types/objectDetection.ts#L46)

---

### TRUCK

> **TRUCK**: `8`

Defined in: [packages/react-native-executorch/src/types/objectDetection.ts:47](https://github.com/software-mansion/react-native-executorch/blob/180a40dc66a1a5554cd133093a04bade528bff90/packages/react-native-executorch/src/types/objectDetection.ts#L47)

---

### TV

> **TV**: `72`

Defined in: [packages/react-native-executorch/src/types/objectDetection.ts:110](https://github.com/software-mansion/react-native-executorch/blob/180a40dc66a1a5554cd133093a04bade528bff90/packages/react-native-executorch/src/types/objectDetection.ts#L110)

---

### UMBRELLA

> **UMBRELLA**: `28`

Defined in: [packages/react-native-executorch/src/types/objectDetection.ts:67](https://github.com/software-mansion/react-native-executorch/blob/180a40dc66a1a5554cd133093a04bade528bff90/packages/react-native-executorch/src/types/objectDetection.ts#L67)

---

### VASE

> **VASE**: `86`

Defined in: [packages/react-native-executorch/src/types/objectDetection.ts:124](https://github.com/software-mansion/react-native-executorch/blob/180a40dc66a1a5554cd133093a04bade528bff90/packages/react-native-executorch/src/types/objectDetection.ts#L124)

---

### WINDOW

> **WINDOW**: `68`

Defined in: [packages/react-native-executorch/src/types/objectDetection.ts:106](https://github.com/software-mansion/react-native-executorch/blob/180a40dc66a1a5554cd133093a04bade528bff90/packages/react-native-executorch/src/types/objectDetection.ts#L106)

---

### WINE_GLASS

> **WINE_GLASS**: `46`

Defined in: [packages/react-native-executorch/src/types/objectDetection.ts:84](https://github.com/software-mansion/react-native-executorch/blob/180a40dc66a1a5554cd133093a04bade528bff90/packages/react-native-executorch/src/types/objectDetection.ts#L84)

---

### ZEBRA

> **ZEBRA**: `24`

Defined in: [packages/react-native-executorch/src/types/objectDetection.ts:63](https://github.com/software-mansion/react-native-executorch/blob/180a40dc66a1a5554cd133093a04bade528bff90/packages/react-native-executorch/src/types/objectDetection.ts#L63)
