docs/versioned_docs/version-0.8.x/06-api-reference/enumerations/CocoLabel.md
# Enumeration: CocoLabel

Defined in: [constants/commonVision.ts:15](https://github.com/software-mansion/react-native-executorch/blob/d0d3e5b7a1d42b2e7bcd89806efcaf0b961974c9/packages/react-native-executorch/src/constants/commonVision.ts#L15)

COCO dataset class labels used by **RF-DETR** and **SSDLite** object detection models.

This enum is **1-indexed** and contains **91 classes**, matching the original COCO
dataset category IDs. For **YOLO** models (object detection or instance segmentation),
use [CocoLabelYolo](CocoLabelYolo.md) instead — a 0-indexed, 80-class variant.

## See

[CocoLabelYolo](CocoLabelYolo.md) for the YOLO-specific variant

## Enumeration Members

### AIRPLANE

> **AIRPLANE**: `5`

Defined in: [constants/commonVision.ts:20](https://github.com/software-mansion/react-native-executorch/blob/d0d3e5b7a1d42b2e7bcd89806efcaf0b961974c9/packages/react-native-executorch/src/constants/commonVision.ts#L20)

***

### APPLE

> **APPLE**: `53`

Defined in: [constants/commonVision.ts:67](https://github.com/software-mansion/react-native-executorch/blob/d0d3e5b7a1d42b2e7bcd89806efcaf0b961974c9/packages/react-native-executorch/src/constants/commonVision.ts#L67)

***

### BACKPACK

> **BACKPACK**: `27`

Defined in: [constants/commonVision.ts:42](https://github.com/software-mansion/react-native-executorch/blob/d0d3e5b7a1d42b2e7bcd89806efcaf0b961974c9/packages/react-native-executorch/src/constants/commonVision.ts#L42)

***

### BANANA

> **BANANA**: `52`

Defined in: [constants/commonVision.ts:66](https://github.com/software-mansion/react-native-executorch/blob/d0d3e5b7a1d42b2e7bcd89806efcaf0b961974c9/packages/react-native-executorch/src/constants/commonVision.ts#L66)

***

### BASEBALL

> **BASEBALL**: `39`

Defined in: [constants/commonVision.ts:54](https://github.com/software-mansion/react-native-executorch/blob/d0d3e5b7a1d42b2e7bcd89806efcaf0b961974c9/packages/react-native-executorch/src/constants/commonVision.ts#L54)

***

### BEAR

> **BEAR**: `23`

Defined in: [constants/commonVision.ts:38](https://github.com/software-mansion/react-native-executorch/blob/d0d3e5b7a1d42b2e7bcd89806efcaf0b961974c9/packages/react-native-executorch/src/constants/commonVision.ts#L38)

***

### BED

> **BED**: `65`

Defined in: [constants/commonVision.ts:79](https://github.com/software-mansion/react-native-executorch/blob/d0d3e5b7a1d42b2e7bcd89806efcaf0b961974c9/packages/react-native-executorch/src/constants/commonVision.ts#L79)

***

### BENCH

> **BENCH**: `15`

Defined in: [constants/commonVision.ts:30](https://github.com/software-mansion/react-native-executorch/blob/d0d3e5b7a1d42b2e7bcd89806efcaf0b961974c9/packages/react-native-executorch/src/constants/commonVision.ts#L30)

***

### BICYCLE

> **BICYCLE**: `2`

Defined in: [constants/commonVision.ts:17](https://github.com/software-mansion/react-native-executorch/blob/d0d3e5b7a1d42b2e7bcd89806efcaf0b961974c9/packages/react-native-executorch/src/constants/commonVision.ts#L17)

***

### BIRD

> **BIRD**: `16`

Defined in: [constants/commonVision.ts:31](https://github.com/software-mansion/react-native-executorch/blob/d0d3e5b7a1d42b2e7bcd89806efcaf0b961974c9/packages/react-native-executorch/src/constants/commonVision.ts#L31)

***

### BLENDER

> **BLENDER**: `83`

Defined in: [constants/commonVision.ts:97](https://github.com/software-mansion/react-native-executorch/blob/d0d3e5b7a1d42b2e7bcd89806efcaf0b961974c9/packages/react-native-executorch/src/constants/commonVision.ts#L97)

***

### BOAT

> **BOAT**: `9`

Defined in: [constants/commonVision.ts:24](https://github.com/software-mansion/react-native-executorch/blob/d0d3e5b7a1d42b2e7bcd89806efcaf0b961974c9/packages/react-native-executorch/src/constants/commonVision.ts#L24)

***

### BOOK

> **BOOK**: `84`

Defined in: [constants/commonVision.ts:98](https://github.com/software-mansion/react-native-executorch/blob/d0d3e5b7a1d42b2e7bcd89806efcaf0b961974c9/packages/react-native-executorch/src/constants/commonVision.ts#L98)

***

### BOTTLE

> **BOTTLE**: `44`

Defined in: [constants/commonVision.ts:58](https://github.com/software-mansion/react-native-executorch/blob/d0d3e5b7a1d42b2e7bcd89806efcaf0b961974c9/packages/react-native-executorch/src/constants/commonVision.ts#L58)

***

### BOWL

> **BOWL**: `51`

Defined in: [constants/commonVision.ts:65](https://github.com/software-mansion/react-native-executorch/blob/d0d3e5b7a1d42b2e7bcd89806efcaf0b961974c9/packages/react-native-executorch/src/constants/commonVision.ts#L65)

***

### BROCCOLI

> **BROCCOLI**: `56`

Defined in: [constants/commonVision.ts:70](https://github.com/software-mansion/react-native-executorch/blob/d0d3e5b7a1d42b2e7bcd89806efcaf0b961974c9/packages/react-native-executorch/src/constants/commonVision.ts#L70)

***

### BUS

> **BUS**: `6`

Defined in: [constants/commonVision.ts:21](https://github.com/software-mansion/react-native-executorch/blob/d0d3e5b7a1d42b2e7bcd89806efcaf0b961974c9/packages/react-native-executorch/src/constants/commonVision.ts#L21)

***

### CAKE

> **CAKE**: `61`

Defined in: [constants/commonVision.ts:75](https://github.com/software-mansion/react-native-executorch/blob/d0d3e5b7a1d42b2e7bcd89806efcaf0b961974c9/packages/react-native-executorch/src/constants/commonVision.ts#L75)

***

### CAR

> **CAR**: `3`

Defined in: [constants/commonVision.ts:18](https://github.com/software-mansion/react-native-executorch/blob/d0d3e5b7a1d42b2e7bcd89806efcaf0b961974c9/packages/react-native-executorch/src/constants/commonVision.ts#L18)

***

### CARROT

> **CARROT**: `57`

Defined in: [constants/commonVision.ts:71](https://github.com/software-mansion/react-native-executorch/blob/d0d3e5b7a1d42b2e7bcd89806efcaf0b961974c9/packages/react-native-executorch/src/constants/commonVision.ts#L71)

***

### CAT

> **CAT**: `17`

Defined in: [constants/commonVision.ts:32](https://github.com/software-mansion/react-native-executorch/blob/d0d3e5b7a1d42b2e7bcd89806efcaf0b961974c9/packages/react-native-executorch/src/constants/commonVision.ts#L32)

***

### CELL\_PHONE

> **CELL\_PHONE**: `77`

Defined in: [constants/commonVision.ts:91](https://github.com/software-mansion/react-native-executorch/blob/d0d3e5b7a1d42b2e7bcd89806efcaf0b961974c9/packages/react-native-executorch/src/constants/commonVision.ts#L91)

***

### CHAIR

> **CHAIR**: `62`

Defined in: [constants/commonVision.ts:76](https://github.com/software-mansion/react-native-executorch/blob/d0d3e5b7a1d42b2e7bcd89806efcaf0b961974c9/packages/react-native-executorch/src/constants/commonVision.ts#L76)

***

### CLOCK

> **CLOCK**: `85`

Defined in: [constants/commonVision.ts:99](https://github.com/software-mansion/react-native-executorch/blob/d0d3e5b7a1d42b2e7bcd89806efcaf0b961974c9/packages/react-native-executorch/src/constants/commonVision.ts#L99)

***

### COUCH

> **COUCH**: `63`

Defined in: [constants/commonVision.ts:77](https://github.com/software-mansion/react-native-executorch/blob/d0d3e5b7a1d42b2e7bcd89806efcaf0b961974c9/packages/react-native-executorch/src/constants/commonVision.ts#L77)

***

### COW

> **COW**: `21`

Defined in: [constants/commonVision.ts:36](https://github.com/software-mansion/react-native-executorch/blob/d0d3e5b7a1d42b2e7bcd89806efcaf0b961974c9/packages/react-native-executorch/src/constants/commonVision.ts#L36)

***

### CUP

> **CUP**: `47`

Defined in: [constants/commonVision.ts:61](https://github.com/software-mansion/react-native-executorch/blob/d0d3e5b7a1d42b2e7bcd89806efcaf0b961974c9/packages/react-native-executorch/src/constants/commonVision.ts#L61)

***

### DESK

> **DESK**: `69`

Defined in: [constants/commonVision.ts:83](https://github.com/software-mansion/react-native-executorch/blob/d0d3e5b7a1d42b2e7bcd89806efcaf0b961974c9/packages/react-native-executorch/src/constants/commonVision.ts#L83)

***

### DINING\_TABLE

> **DINING\_TABLE**: `67`

Defined in: [constants/commonVision.ts:81](https://github.com/software-mansion/react-native-executorch/blob/d0d3e5b7a1d42b2e7bcd89806efcaf0b961974c9/packages/react-native-executorch/src/constants/commonVision.ts#L81)

***

### DOG

> **DOG**: `18`

Defined in: [constants/commonVision.ts:33](https://github.com/software-mansion/react-native-executorch/blob/d0d3e5b7a1d42b2e7bcd89806efcaf0b961974c9/packages/react-native-executorch/src/constants/commonVision.ts#L33)

***

### DONUT

> **DONUT**: `60`

Defined in: [constants/commonVision.ts:74](https://github.com/software-mansion/react-native-executorch/blob/d0d3e5b7a1d42b2e7bcd89806efcaf0b961974c9/packages/react-native-executorch/src/constants/commonVision.ts#L74)

***

### DOOR

> **DOOR**: `71`

Defined in: [constants/commonVision.ts:85](https://github.com/software-mansion/react-native-executorch/blob/d0d3e5b7a1d42b2e7bcd89806efcaf0b961974c9/packages/react-native-executorch/src/constants/commonVision.ts#L85)

***

### ELEPHANT

> **ELEPHANT**: `22`

Defined in: [constants/commonVision.ts:37](https://github.com/software-mansion/react-native-executorch/blob/d0d3e5b7a1d42b2e7bcd89806efcaf0b961974c9/packages/react-native-executorch/src/constants/commonVision.ts#L37)

***

### EYE

> **EYE**: `30`

Defined in: [constants/commonVision.ts:45](https://github.com/software-mansion/react-native-executorch/blob/d0d3e5b7a1d42b2e7bcd89806efcaf0b961974c9/packages/react-native-executorch/src/constants/commonVision.ts#L45)

***

### FIRE\_HYDRANT

> **FIRE\_HYDRANT**: `11`

Defined in: [constants/commonVision.ts:26](https://github.com/software-mansion/react-native-executorch/blob/d0d3e5b7a1d42b2e7bcd89806efcaf0b961974c9/packages/react-native-executorch/src/constants/commonVision.ts#L26)

***

### FORK

> **FORK**: `48`

Defined in: [constants/commonVision.ts:62](https://github.com/software-mansion/react-native-executorch/blob/d0d3e5b7a1d42b2e7bcd89806efcaf0b961974c9/packages/react-native-executorch/src/constants/commonVision.ts#L62)

***

### FRISBEE

> **FRISBEE**: `34`

Defined in: [constants/commonVision.ts:49](https://github.com/software-mansion/react-native-executorch/blob/d0d3e5b7a1d42b2e7bcd89806efcaf0b961974c9/packages/react-native-executorch/src/constants/commonVision.ts#L49)

***

### GIRAFFE

> **GIRAFFE**: `25`

Defined in: [constants/commonVision.ts:40](https://github.com/software-mansion/react-native-executorch/blob/d0d3e5b7a1d42b2e7bcd89806efcaf0b961974c9/packages/react-native-executorch/src/constants/commonVision.ts#L40)

***

### HAIR\_BRUSH

> **HAIR\_BRUSH**: `91`

Defined in: [constants/commonVision.ts:105](https://github.com/software-mansion/react-native-executorch/blob/d0d3e5b7a1d42b2e7bcd89806efcaf0b961974c9/packages/react-native-executorch/src/constants/commonVision.ts#L105)

***

### HAIR\_DRIER

> **HAIR\_DRIER**: `89`

Defined in: [constants/commonVision.ts:103](https://github.com/software-mansion/react-native-executorch/blob/d0d3e5b7a1d42b2e7bcd89806efcaf0b961974c9/packages/react-native-executorch/src/constants/commonVision.ts#L103)

***

### HANDBAG

> **HANDBAG**: `31`

Defined in: [constants/commonVision.ts:46](https://github.com/software-mansion/react-native-executorch/blob/d0d3e5b7a1d42b2e7bcd89806efcaf0b961974c9/packages/react-native-executorch/src/constants/commonVision.ts#L46)

***

### HAT

> **HAT**: `26`

Defined in: [constants/commonVision.ts:41](https://github.com/software-mansion/react-native-executorch/blob/d0d3e5b7a1d42b2e7bcd89806efcaf0b961974c9/packages/react-native-executorch/src/constants/commonVision.ts#L41)

***

### HORSE

> **HORSE**: `19`

Defined in: [constants/commonVision.ts:34](https://github.com/software-mansion/react-native-executorch/blob/d0d3e5b7a1d42b2e7bcd89806efcaf0b961974c9/packages/react-native-executorch/src/constants/commonVision.ts#L34)

***

### HOT\_DOG

> **HOT\_DOG**: `58`

Defined in: [constants/commonVision.ts:72](https://github.com/software-mansion/react-native-executorch/blob/d0d3e5b7a1d42b2e7bcd89806efcaf0b961974c9/packages/react-native-executorch/src/constants/commonVision.ts#L72)

***

### KEYBOARD

> **KEYBOARD**: `76`

Defined in: [constants/commonVision.ts:90](https://github.com/software-mansion/react-native-executorch/blob/d0d3e5b7a1d42b2e7bcd89806efcaf0b961974c9/packages/react-native-executorch/src/constants/commonVision.ts#L90)

***

### KITE

> **KITE**: `38`

Defined in: [constants/commonVision.ts:53](https://github.com/software-mansion/react-native-executorch/blob/d0d3e5b7a1d42b2e7bcd89806efcaf0b961974c9/packages/react-native-executorch/src/constants/commonVision.ts#L53)

***

### KNIFE

> **KNIFE**: `49`

Defined in: [constants/commonVision.ts:63](https://github.com/software-mansion/react-native-executorch/blob/d0d3e5b7a1d42b2e7bcd89806efcaf0b961974c9/packages/react-native-executorch/src/constants/commonVision.ts#L63)

***

### LAPTOP

> **LAPTOP**: `73`

Defined in: [constants/commonVision.ts:87](https://github.com/software-mansion/react-native-executorch/blob/d0d3e5b7a1d42b2e7bcd89806efcaf0b961974c9/packages/react-native-executorch/src/constants/commonVision.ts#L87)

***

### MICROWAVE

> **MICROWAVE**: `78`

Defined in: [constants/commonVision.ts:92](https://github.com/software-mansion/react-native-executorch/blob/d0d3e5b7a1d42b2e7bcd89806efcaf0b961974c9/packages/react-native-executorch/src/constants/commonVision.ts#L92)

***

### MIRROR

> **MIRROR**: `66`

Defined in: [constants/commonVision.ts:80](https://github.com/software-mansion/react-native-executorch/blob/d0d3e5b7a1d42b2e7bcd89806efcaf0b961974c9/packages/react-native-executorch/src/constants/commonVision.ts#L80)

***

### MOTORCYCLE

> **MOTORCYCLE**: `4`

Defined in: [constants/commonVision.ts:19](https://github.com/software-mansion/react-native-executorch/blob/d0d3e5b7a1d42b2e7bcd89806efcaf0b961974c9/packages/react-native-executorch/src/constants/commonVision.ts#L19)

***

### MOUSE

> **MOUSE**: `74`

Defined in: [constants/commonVision.ts:88](https://github.com/software-mansion/react-native-executorch/blob/d0d3e5b7a1d42b2e7bcd89806efcaf0b961974c9/packages/react-native-executorch/src/constants/commonVision.ts#L88)

***

### ORANGE

> **ORANGE**: `55`

Defined in: [constants/commonVision.ts:69](https://github.com/software-mansion/react-native-executorch/blob/d0d3e5b7a1d42b2e7bcd89806efcaf0b961974c9/packages/react-native-executorch/src/constants/commonVision.ts#L69)

***

### OVEN

> **OVEN**: `79`

Defined in: [constants/commonVision.ts:93](https://github.com/software-mansion/react-native-executorch/blob/d0d3e5b7a1d42b2e7bcd89806efcaf0b961974c9/packages/react-native-executorch/src/constants/commonVision.ts#L93)

***

### PARKING

> **PARKING**: `14`

Defined in: [constants/commonVision.ts:29](https://github.com/software-mansion/react-native-executorch/blob/d0d3e5b7a1d42b2e7bcd89806efcaf0b961974c9/packages/react-native-executorch/src/constants/commonVision.ts#L29)

***

### PERSON

> **PERSON**: `1`

Defined in: [constants/commonVision.ts:16](https://github.com/software-mansion/react-native-executorch/blob/d0d3e5b7a1d42b2e7bcd89806efcaf0b961974c9/packages/react-native-executorch/src/constants/commonVision.ts#L16)

***

### PIZZA

> **PIZZA**: `59`

Defined in: [constants/commonVision.ts:73](https://github.com/software-mansion/react-native-executorch/blob/d0d3e5b7a1d42b2e7bcd89806efcaf0b961974c9/packages/react-native-executorch/src/constants/commonVision.ts#L73)

***

### PLATE

> **PLATE**: `45`

Defined in: [constants/commonVision.ts:59](https://github.com/software-mansion/react-native-executorch/blob/d0d3e5b7a1d42b2e7bcd89806efcaf0b961974c9/packages/react-native-executorch/src/constants/commonVision.ts#L59)

***

### POTTED\_PLANT

> **POTTED\_PLANT**: `64`

Defined in: [constants/commonVision.ts:78](https://github.com/software-mansion/react-native-executorch/blob/d0d3e5b7a1d42b2e7bcd89806efcaf0b961974c9/packages/react-native-executorch/src/constants/commonVision.ts#L78)

***

### REFRIGERATOR

> **REFRIGERATOR**: `82`

Defined in: [constants/commonVision.ts:96](https://github.com/software-mansion/react-native-executorch/blob/d0d3e5b7a1d42b2e7bcd89806efcaf0b961974c9/packages/react-native-executorch/src/constants/commonVision.ts#L96)

***

### REMOTE

> **REMOTE**: `75`

Defined in: [constants/commonVision.ts:89](https://github.com/software-mansion/react-native-executorch/blob/d0d3e5b7a1d42b2e7bcd89806efcaf0b961974c9/packages/react-native-executorch/src/constants/commonVision.ts#L89)

***

### SANDWICH

> **SANDWICH**: `54`

Defined in: [constants/commonVision.ts:68](https://github.com/software-mansion/react-native-executorch/blob/d0d3e5b7a1d42b2e7bcd89806efcaf0b961974c9/packages/react-native-executorch/src/constants/commonVision.ts#L68)

***

### SCISSORS

> **SCISSORS**: `87`

Defined in: [constants/commonVision.ts:101](https://github.com/software-mansion/react-native-executorch/blob/d0d3e5b7a1d42b2e7bcd89806efcaf0b961974c9/packages/react-native-executorch/src/constants/commonVision.ts#L101)

***

### SHEEP

> **SHEEP**: `20`

Defined in: [constants/commonVision.ts:35](https://github.com/software-mansion/react-native-executorch/blob/d0d3e5b7a1d42b2e7bcd89806efcaf0b961974c9/packages/react-native-executorch/src/constants/commonVision.ts#L35)

***

### SHOE

> **SHOE**: `29`

Defined in: [constants/commonVision.ts:44](https://github.com/software-mansion/react-native-executorch/blob/d0d3e5b7a1d42b2e7bcd89806efcaf0b961974c9/packages/react-native-executorch/src/constants/commonVision.ts#L44)

***

### SINK

> **SINK**: `81`

Defined in: [constants/commonVision.ts:95](https://github.com/software-mansion/react-native-executorch/blob/d0d3e5b7a1d42b2e7bcd89806efcaf0b961974c9/packages/react-native-executorch/src/constants/commonVision.ts#L95)

***

### SKATEBOARD

> **SKATEBOARD**: `41`

Defined in: [constants/commonVision.ts:55](https://github.com/software-mansion/react-native-executorch/blob/d0d3e5b7a1d42b2e7bcd89806efcaf0b961974c9/packages/react-native-executorch/src/constants/commonVision.ts#L55)

***

### SKIS

> **SKIS**: `35`

Defined in: [constants/commonVision.ts:50](https://github.com/software-mansion/react-native-executorch/blob/d0d3e5b7a1d42b2e7bcd89806efcaf0b961974c9/packages/react-native-executorch/src/constants/commonVision.ts#L50)

***

### SNOWBOARD

> **SNOWBOARD**: `36`

Defined in: [constants/commonVision.ts:51](https://github.com/software-mansion/react-native-executorch/blob/d0d3e5b7a1d42b2e7bcd89806efcaf0b961974c9/packages/react-native-executorch/src/constants/commonVision.ts#L51)

***

### SPOON

> **SPOON**: `50`

Defined in: [constants/commonVision.ts:64](https://github.com/software-mansion/react-native-executorch/blob/d0d3e5b7a1d42b2e7bcd89806efcaf0b961974c9/packages/react-native-executorch/src/constants/commonVision.ts#L64)

***

### SPORTS

> **SPORTS**: `37`

Defined in: [constants/commonVision.ts:52](https://github.com/software-mansion/react-native-executorch/blob/d0d3e5b7a1d42b2e7bcd89806efcaf0b961974c9/packages/react-native-executorch/src/constants/commonVision.ts#L52)

***

### STOP\_SIGN

> **STOP\_SIGN**: `13`

Defined in: [constants/commonVision.ts:28](https://github.com/software-mansion/react-native-executorch/blob/d0d3e5b7a1d42b2e7bcd89806efcaf0b961974c9/packages/react-native-executorch/src/constants/commonVision.ts#L28)

***

### STREET\_SIGN

> **STREET\_SIGN**: `12`

Defined in: [constants/commonVision.ts:27](https://github.com/software-mansion/react-native-executorch/blob/d0d3e5b7a1d42b2e7bcd89806efcaf0b961974c9/packages/react-native-executorch/src/constants/commonVision.ts#L27)

***

### SUITCASE

> **SUITCASE**: `33`

Defined in: [constants/commonVision.ts:48](https://github.com/software-mansion/react-native-executorch/blob/d0d3e5b7a1d42b2e7bcd89806efcaf0b961974c9/packages/react-native-executorch/src/constants/commonVision.ts#L48)

***

### SURFBOARD

> **SURFBOARD**: `42`

Defined in: [constants/commonVision.ts:56](https://github.com/software-mansion/react-native-executorch/blob/d0d3e5b7a1d42b2e7bcd89806efcaf0b961974c9/packages/react-native-executorch/src/constants/commonVision.ts#L56)

***

### TEDDY\_BEAR

> **TEDDY\_BEAR**: `88`

Defined in: [constants/commonVision.ts:102](https://github.com/software-mansion/react-native-executorch/blob/d0d3e5b7a1d42b2e7bcd89806efcaf0b961974c9/packages/react-native-executorch/src/constants/commonVision.ts#L102)

***

### TENNIS\_RACKET

> **TENNIS\_RACKET**: `43`

Defined in: [constants/commonVision.ts:57](https://github.com/software-mansion/react-native-executorch/blob/d0d3e5b7a1d42b2e7bcd89806efcaf0b961974c9/packages/react-native-executorch/src/constants/commonVision.ts#L57)

***

### TIE

> **TIE**: `32`

Defined in: [constants/commonVision.ts:47](https://github.com/software-mansion/react-native-executorch/blob/d0d3e5b7a1d42b2e7bcd89806efcaf0b961974c9/packages/react-native-executorch/src/constants/commonVision.ts#L47)

***

### TOASTER

> **TOASTER**: `80`

Defined in: [constants/commonVision.ts:94](https://github.com/software-mansion/react-native-executorch/blob/d0d3e5b7a1d42b2e7bcd89806efcaf0b961974c9/packages/react-native-executorch/src/constants/commonVision.ts#L94)

***

### TOILET

> **TOILET**: `70`

Defined in: [constants/commonVision.ts:84](https://github.com/software-mansion/react-native-executorch/blob/d0d3e5b7a1d42b2e7bcd89806efcaf0b961974c9/packages/react-native-executorch/src/constants/commonVision.ts#L84)

***

### TOOTHBRUSH

> **TOOTHBRUSH**: `90`

Defined in: [constants/commonVision.ts:104](https://github.com/software-mansion/react-native-executorch/blob/d0d3e5b7a1d42b2e7bcd89806efcaf0b961974c9/packages/react-native-executorch/src/constants/commonVision.ts#L104)

***

### TRAFFIC\_LIGHT

> **TRAFFIC\_LIGHT**: `10`

Defined in: [constants/commonVision.ts:25](https://github.com/software-mansion/react-native-executorch/blob/d0d3e5b7a1d42b2e7bcd89806efcaf0b961974c9/packages/react-native-executorch/src/constants/commonVision.ts#L25)

***

### TRAIN

> **TRAIN**: `7`

Defined in: [constants/commonVision.ts:22](https://github.com/software-mansion/react-native-executorch/blob/d0d3e5b7a1d42b2e7bcd89806efcaf0b961974c9/packages/react-native-executorch/src/constants/commonVision.ts#L22)

***

### TRUCK

> **TRUCK**: `8`

Defined in: [constants/commonVision.ts:23](https://github.com/software-mansion/react-native-executorch/blob/d0d3e5b7a1d42b2e7bcd89806efcaf0b961974c9/packages/react-native-executorch/src/constants/commonVision.ts#L23)

***

### TV

> **TV**: `72`

Defined in: [constants/commonVision.ts:86](https://github.com/software-mansion/react-native-executorch/blob/d0d3e5b7a1d42b2e7bcd89806efcaf0b961974c9/packages/react-native-executorch/src/constants/commonVision.ts#L86)

***

### UMBRELLA

> **UMBRELLA**: `28`

Defined in: [constants/commonVision.ts:43](https://github.com/software-mansion/react-native-executorch/blob/d0d3e5b7a1d42b2e7bcd89806efcaf0b961974c9/packages/react-native-executorch/src/constants/commonVision.ts#L43)

***

### VASE

> **VASE**: `86`

Defined in: [constants/commonVision.ts:100](https://github.com/software-mansion/react-native-executorch/blob/d0d3e5b7a1d42b2e7bcd89806efcaf0b961974c9/packages/react-native-executorch/src/constants/commonVision.ts#L100)

***

### WINDOW

> **WINDOW**: `68`

Defined in: [constants/commonVision.ts:82](https://github.com/software-mansion/react-native-executorch/blob/d0d3e5b7a1d42b2e7bcd89806efcaf0b961974c9/packages/react-native-executorch/src/constants/commonVision.ts#L82)

***

### WINE\_GLASS

> **WINE\_GLASS**: `46`

Defined in: [constants/commonVision.ts:60](https://github.com/software-mansion/react-native-executorch/blob/d0d3e5b7a1d42b2e7bcd89806efcaf0b961974c9/packages/react-native-executorch/src/constants/commonVision.ts#L60)

***

### ZEBRA

> **ZEBRA**: `24`

Defined in: [constants/commonVision.ts:39](https://github.com/software-mansion/react-native-executorch/blob/d0d3e5b7a1d42b2e7bcd89806efcaf0b961974c9/packages/react-native-executorch/src/constants/commonVision.ts#L39)
